--- a/reveal.js-2.1.0/test.html
+++ b/reveal.js-2.1.0/test.html
@@ -1,12 +1,49 @@
+<html>
+	<head>
+		<meta charset="utf-8">
 
-<section data-markdown>
-    <script type="text/template">
-        ## Page title
+		<title>reveal.js - The HTML Presentation Framework</title>
 
-        A paragraph with some text and a [link](http://hakim.se).
-    </script>
-</section>
+		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="author" content="Hakim El Hattab">
 
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+
+		<!-- For syntax highlighting -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
+
+		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
+		<script>
+			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+		</script>
+
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
+	</head>
+
+<body>
+
+<div class="reveal">
+    <div class="slides">
+      <section data-markdown>
+          <script type="text/template">
+              ## Page title
+
+              A paragraph with some text and a [link](http://hakim.se).
+          </script>
+      </section>
+    </div>
+</div>
+
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.min.js"></script>
+
+<script>
 Reveal.initialize({
 
     // Display controls in the bottom right corner
@@ -91,3 +128,6 @@ Reveal.initialize({
     parallaxBackgroundVertical: ''
 
 });
+</script>
+</body>
+</html>
