--- a/reveal.js-2.1.0/test.html
+++ b/reveal.js-2.1.0/test.html
@@ -37,6 +37,13 @@
               A paragraph with some text and a [link](http://hakim.se).
           </script>
       </section>
+      <section data-markdown>
+          <script type="text/template">
+              ## Page title
+
+              A paragraph with some text and a [link](http://hakim.se).
+          </script>
+      </section>
     </div>
 </div>
 
