--- a/reveal.js-2.1.0/test.html
+++ b/reveal.js-2.1.0/test.html
@@ -30,20 +30,12 @@
 
 <div class="reveal">
     <div class="slides">
-      <section data-markdown>
-          <script type="text/template">
-              ## Page title
-
-              A paragraph with some text and a [link](http://hakim.se).
-          </script>
-      </section>
-      <section data-markdown>
-          <script type="text/template">
-              ## Page title
-
-              A paragraph with some text and a [link](http://hakim.se).
-          </script>
-      </section>
+    <section data-markdown="../README.md"  
+         data-separator="^\n\n\n"  
+         data-separator-vertical="^\n\n"  
+         data-separator-notes="^Note:"  
+         data-charset="iso-8859-15">
+    </section>
     </div>
 </div>
 
