--- a/reveal.js-2.1.0/test.html
+++ b/reveal.js-2.1.0/test.html
@@ -33,8 +33,7 @@
     <section data-markdown="../README.md"  
          data-separator="^\n\n\n"  
          data-separator-vertical="^\n\n"  
-         data-separator-notes="^Note:"  
-         data-charset="iso-8859-15">
+         data-separator-notes="^Note:">
     </section>
     </div>
 </div>
