--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@ customers.
 <section>
 Some great resources to learn more about launching a startup company:
 
- * Attend a [Startup Weekend](http://startupweekend.org) in a city near you
- * Apply for the [Kentucky Governor's School for Entrepreneurs (GSE)](http://www.kentuckygse.com/)
- * Use [Lean Startup principles](https://en.wikipedia.org/wiki/Lean_startup) to test your idea
+<ul>
+<li>Attend a <a href="http://startupweekend.org">Startup Weekend</a> in a city near you</li>
+<li>Apply for the <a href="http://www.kentuckygse.com/">Kentucky Governor's School for Entrepreneurs (GSE)</a></li>
+<li>Use <a href="https://en.wikipedia.org/wiki/Lean_startup">Lean Startup principles</a> to test your idea</li>
+</ul>
 </section>
 
 </section>
