--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 <h1>From Here To Career</h1>
 
 <p>Notes about pursuing a career in computing.
-For students of Rural Up! Code Academy courses.</p>
+For students of
+<a href="http://www.ruralup.org/">Rural Up! Code Academy</a>
+courses.</p>
 
 </section>
 <section>
